--- a/404.html.ejs
+++ b/404.html.ejs
@@ -9,17 +9,7 @@
   </head>
   <!-- Background pattern from Toptal Subtle Patterns -->
   <body style="background-image: url('styles/dark-honeycomb.png');">
-    <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
-      <a class="navbar-brand"><img src="styles/logo.png" style="max-height: 2rem;"/></a>
-      <ul class="navbar-nav mr-auto">
-        <li class="nav-item">
-          <a class="nav-link" href="projects.html">Projects</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="demoinfo.html">Demo Info</a>
-        </li>
-      </ul>
-    </nav>
+    <%- include('nav'); -%>
     <div class="jumbotron text-light bg-dark m-3">
       <h1 class="display-3">404 Not Found</h1>
       <p class="lead">
