--- a/demoinfo.html.ejs
+++ b/demoinfo.html.ejs
@@ -17,20 +17,10 @@
   </head>
   <!-- Background pattern from Toptal Subtle Patterns -->
   <body class="text-light" style="background-image: url('styles/dark-honeycomb.png');">
-    <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
-      <a class="navbar-brand"><img src="styles/logo.png" style="max-height: 2rem;"/></a>
-      <ul class="navbar-nav mr-auto">
-        <li class="nav-item">
-          <a class="nav-link" href="projects.html">Projects</a>
-        </li>
-        <li class="nav-item active">
-          <a class="nav-link" href="#">Demo Info <span class="sr-only">(current)</span></a>
-        </li>
-      </ul>
-    </nav>
+    <%- include('nav'); -%>
     <div class="jumbotron text-light bg-dark m-3 py-4">
       <h3>Demonstration Information</h3>
-      <h4>Where does my data go to when I am using the demos?</h4>
+      <h4>Where do my data go to when I am using the demos?</h4>
       <ul>
         <li>
           All data are stored on the browser temporarily, they will be cleared when your browser is closed.
@@ -71,10 +61,6 @@
         as a compatibility layer.
       </div>
     </div>
-    <footer class="mt-auto py-3 bg-dark">
-      <div class="container text-muted">
-        Hand crafted with <img src="styles/heart-fill.svg" alt="love"/> by Wylie.
-      </div>
-    </footer>
+    <%- include('footer'); -%>
   </body>
 </html>
