Moved source files to data directory

--- a/data/demoinfo.html.ejs
+++ b/data/demoinfo.html.ejs
@@ -16,7 +16,8 @@
     </style>
   </head>
   <!-- Background pattern from Toptal Subtle Patterns -->
-  <body class="text-light" style="background-image: url('styles/dark-honeycomb.png');">
+  <body class="text-light"
+      style="background-image: url('styles/dark-honeycomb.png');">
     <%- include('nav'); -%>
     <div class="jumbotron text-light bg-dark m-3 py-4">
       <h3>Demonstration Information</h3>
