Added blog section

--- a/data/nav.ejs
+++ b/data/nav.ejs
@@ -2,6 +2,7 @@
   const pagePairs = {
     'Projects': 'projects.html',
     'Demo Info': 'demoinfo.html',
+    'Blog': 'blog.html',
   }
 %>
 <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
