--- a/data/footer.ejs
+++ b/data/footer.ejs
@@ -1,5 +1,5 @@
 <footer class="mt-auto py-3 bg-dark">
   <div class="container text-muted">
-    Hand crafted with <img src="styles/heart-fill.svg" alt="love"/> by Wylie.
+    Hand crafted with 😐 by Wylie.
   </div>
 </footer>
