--- a/data/404.html.ejs
+++ b/data/404.html.ejs
@@ -1,14 +1,10 @@
 <!DOCTYPE html>
 <html lang="zh-Hant">
   <head>
-    <meta charset="utf-8">
-    <meta name="theme-color" content="#40e0d0">
     <title>Oh No...</title>
-    <link rel="shortcut icon" type="image/png" href="styles/smiley.svg"/>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"/>
+    <%- include('default-head'); -%>
   </head>
-  <!-- Background pattern from Toptal Subtle Patterns -->
-  <body style="background-image: url('styles/dark-honeycomb.png');">
+  <body>
     <%- include('nav'); -%>
     <div class="jumbotron text-light bg-dark m-3">
       <h1 class="display-3">404 Not Found</h1>
