--- a/data/projects.html.ejs
+++ b/data/projects.html.ejs
@@ -1,25 +1,13 @@
 <!DOCTYPE html>
 <html lang="zh-Hant">
   <head>
-    <meta charset="utf-8">
-    <meta name="theme-color" content="#40e0d0">
     <title>WylieYYYY's Projects</title>
-    <link rel="shortcut icon" type="image/png" href="styles/smiley.svg"/>
+    <%- include('default-head'); -%>
     <script src="https://cdn.jsdelivr.net/npm/vue"></script>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/markdown-it/dist/markdown-it.min.js"></script>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"/>
     <script src="projects.js" defer></script>
     <style>
-      a {
-        color: #20c997;
-      }
-      code {
-        color: #e83e8c;
-      }
-      pre code {
-        color: white;
-      }
       .fade-leave-active {
         transition: opacity 0.5s;
       }
@@ -36,8 +24,7 @@
       }
     </style>
   </head>
-  <!-- Background pattern from Toptal Subtle Patterns -->
-  <body style="background-image: url('styles/dark-honeycomb.png');">
+  <body>
     <%- include('nav'); -%>
     <main id="app">
       <div style="position: absolute; width: 100%;">
