--- a/data/blog.html.ejs
+++ b/data/blog.html.ejs
@@ -12,7 +12,7 @@
           <div class="card-body">
             <h5 class="card-title"><%= post.title %></h5>
             <h6 class="card-subtitle mb-2 text-muted"><%= post.subtitle %></h6>
-            <p class="card-text"><%- post.content %></p>
+            <div class="card-text"><%- post.content %></div>
           </div>
         </div>
       <% } -%>
