Changed branch and added syntax highlighting for blog

--- a/data/blog.html.ejs
+++ b/data/blog.html.ejs
@@ -3,6 +3,7 @@
   <head>
     <title>WylieYYYY's Blog</title>
     <%- include('default-head'); -%>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/10.7.1/styles/stackoverflow-dark.min.css">
   </head>
   <body class="text-light">
     <%- include('nav'); -%>
