--- a/data/nav.ejs
+++ b/data/nav.ejs
@@ -6,7 +6,7 @@
   }
 %>
 <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
-  <a class="navbar-brand"><img src="/styles/logo.png" style="max-height: 2rem;"/></a>
+  <a class="navbar-brand"><img src="/styles/logo.webp" style="max-height: 2rem;"/></a>
   <ul class="navbar-nav mr-auto">
     <% for (const [name, path] of Object.entries(pagePairs)) { -%>
       <% if (current === path) { -%>
