--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -11,7 +11,7 @@ body {
 
     background-color: #2a2a2a;
     /* Background pattern from Toptal Subtle Patterns */
-    background-image: url('dark-honeycomb.png');
+    background-image: url('dark-honeycomb.webp');
     background-repeat: repeat;
 }
 
