minimize projects page CSS, maximize accessibility, best practices, and SEO score

--- a/data/components/default-head.ejs
+++ b/data/components/default-head.ejs
@@ -1,4 +1,6 @@
 <meta charset="utf-8">
+<meta name="description" content="WylieYYYY's Personal Site, for storing projects and blog posts.">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="theme-color" content="#40e0d0">
 <link rel="shortcut icon" type="image/png" href="/styles/smiley.svg"/>
 <link rel="stylesheet" href="/styles/styles.css"/>
