--- a/data/pages/404.html.ejs
+++ b/data/pages/404.html.ejs
@@ -2,10 +2,10 @@
 <html lang="zh-Hant">
   <head>
     <title>Oh No...</title>
-    <%- include('default-head'); -%>
+    <%- include('../components/default-head'); -%>
   </head>
   <body>
-    <%- include('nav'); -%>
+    <%- include('../components/nav'); -%>
     <div class="jumbotron text-light bg-dark m-3">
       <h1 class="display-3">404 Not Found</h1>
       <p class="lead">
