--- a/data/pages/demoinfo.html.ejs
+++ b/data/pages/demoinfo.html.ejs
@@ -2,11 +2,11 @@
 <html lang="zh-Hant">
   <head>
     <title>Demonstration Info</title>
-    <%- include('default-head'); -%>
+    <%- include('../components/default-head'); -%>
   </head>
   <body class="text-light">
-    <%- include('nav'); -%>
+    <%- include('../components/nav'); -%>
     <main class="jumbotron text-light bg-dark m-3 py-4"><%- content -%></main>
-    <%- include('footer'); -%>
+    <%- include('../components/footer'); -%>
   </body>
 </html>
