--- a/data/pages/blog.html.ejs
+++ b/data/pages/blog.html.ejs
@@ -2,11 +2,11 @@
 <html lang="zh-Hant">
   <head>
     <title>WylieYYYY's Blog</title>
-    <%- include('default-head'); -%>
+    <%- include('../components/default-head'); -%>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/10.7.1/styles/stackoverflow-dark.min.css">
   </head>
   <body class="text-light">
-    <%- include('nav'); -%>
+    <%- include('../components/nav'); -%>
     <main>
       <% for (const post of posts) { -%>
         <div class="card m-5" style="background-color: #121212; width: 80%;">
@@ -18,6 +18,6 @@
         </div>
       <% } -%>
     </main>
-    <%- include('footer'); -%>
+    <%- include('../components/footer'); -%>
   </body>
 </html>
