Minimizing JS and HTML, reduced requests, footer CLS, and transition delay, corrected navigation link and stylesheet purging, configured to lazily fetch markdown parser, put placeholder in repository

--- a/data/components/footer.ejs
+++ b/data/components/footer.ejs
@@ -1,4 +1,4 @@
-<footer class="mt-auto p-3 bg-dark">
+<footer v-if="response" class="mt-auto p-3 bg-dark">
   <div class="text-muted">
     Hand crafted with 😐 by Wylie.
   </div>
