--- a/data/components/nav.ejs
+++ b/data/components/nav.ejs
@@ -1,8 +1,8 @@
 <%
   const pagePairs = {
-    'Projects': 'projects.html',
-    'Demo Info': 'demoinfo.html',
-    'Blog': 'blog.html',
+    'Projects': '/projects.html',
+    'Demo Info': '/demoinfo.html',
+    'Blog': '/blog.html',
   }
 %>
 <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
