Pinned Vue version to 2

--- a/data/pages/projects.html.ejs
+++ b/data/pages/projects.html.ejs
@@ -3,7 +3,7 @@
   <head>
     <title>WylieYYYY's Projects</title>
     <%- include('../components/default-head'); -%>
-    <script src="https://cdn.jsdelivr.net/npm/vue" defer></script>
+    <script src="https://cdn.jsdelivr.net/npm/vue@2" defer></script>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js" defer></script>
     <script src="projects.js" defer></script>
     <style>
