Changed footer ordering and semantic tag

--- a/data/pages/404.html.ejs
+++ b/data/pages/404.html.ejs
@@ -6,12 +6,12 @@
   </head>
   <body>
     <%- include('../components/nav'); -%>
-    <div class="jumbotron text-light bg-dark m-3">
+    <main class="jumbotron text-light bg-dark m-3">
       <h1 class="display-3">404 Not Found</h1>
       <p class="lead">
         Looks like you are redirected here mistakenly, please submit an issue with detail
         <a href="https://gitlab.com/WylieYYYY/wylieyyyy.gitlab.io/-/issues">here</a>.
       </p>
-    </div>
+    </main>
   </body>
 </html>
