--- a/data/styles.scss
+++ b/data/styles.scss
@@ -17,7 +17,7 @@ html {
 body {
     display: flex;
     flex-direction: column;
-    min-height: 100%;
+    height: 100%;
 
     background-color: #2a2a2a;
     // Background pattern from Toptal Subtle Patterns
@@ -28,8 +28,19 @@ body {
 main { flex: 1; }
 
 .text-muted { color: bootstrap.$gray-500 !important; }
-a { color: bootstrap.$teal; }
+a {
+    color: bootstrap.$teal;
+    &:hover { color: color.change(bootstrap.$teal, $lightness: 80%); }
+}
 code { color: color.change(bootstrap.$pink, $lightness: 80%); }
 pre code { color: white; }
+
+details > ul {
+    margin-bottom: 0rem;
+    padding-left: 1rem;
+    border-left: 2px dotted white;
+    li { list-style-type: none; }
+}
+#editor { color: white; }
 
 /* purgecss end ignore */
