--- a/data/pages/codedump/index.html.ejs
+++ b/data/pages/codedump/index.html.ejs
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
+<!-- <% const intro = `
 
 
-<!--
+
   Welcome to CodeDump
   ===================
 
@@ -9,36 +10,59 @@
   Select a file from the menu to get started,
   preview will come up here if Javascript is enabled.
   If Javascript is disabled, do not panic, you will be redirected to the viewer.
--->
 
 
+
+`; %> -->
 <html lang="zh-Hant">
   <head>
     <title>CodeDump</title>
     <%- include('../../components/default-head'); -%>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/10.7.1/styles/stackoverflow-dark.min.css">
-    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js" defer></script>
     <script>
       'use strict';
+      const remSize = parseFloat(
+          getComputedStyle(document.documentElement).fontSize);
       async function updatePreview(filepath) {
         const preview = document.getElementById('editor');
         preview.src = filepath;
         preview.scrollTo(0, 0);
+        const collapseButton = document.getElementById('collapse-btn');
+        if (innerWidth <= 40 * remSize) collapseButton.checked = false;
       }
     </script>
   </head>
   <body>
     <%- include('../../components/nav'); -%>
+    <input type="checkbox" id="collapse-btn" style="display: none;" aria-hidden="true"/>
     <main class="d-flex flex-row-reverse" style="overflow: hidden;">
-      <iframe id="editor" src="index.html.ejs.html" style="width: 80%;"></iframe>
-      <aside class="text-light bg-dark pr-4" style="flex-grow: 1; flex-shrink: 0;">
+      <iframe id="editor" src="index.html.ejs.html">
+        <h1>Introduction</h1>
+        <p>
+          <%-
+            intro.replace(new RegExp(/^\s*/, 'gm'), '')
+                .replace(new RegExp(/^\n?/, 'gm'), '<br/>');
+          %>
+        </p>
+      </iframe>
+      <label for="collapse-btn" role="button"
+          class="d-flex flex-column text-light btn" aria-hidden="true">
+        <img src="../styles/fold-up.svg" alt=""/>
+        <div class="d-flex justify-content-between"
+            style="height: 6rem; writing-mode: vertical-rl;">
+          <span id="open-lbl">open</span>
+          <span id="close-lbl">close</span> menu
+        </div>
+        <img src="../styles/fold-up.svg" alt=""/>
+      </label>
+      <aside class="text-light bg-dark px-3">
         <h1 class="h4 d-flex justify-content-center align-items-center">Contents</h1>
         <hr/>
-        <nav class="ml-3" style="font-family: monospace;">
+        <nav class="mt-3" style="font-family: monospace;">
           <%- include('../../components/filetree', {
             tree: tree, prefixLength: prefixLength,
             onclick: (path) => `event.preventDefault();updatePreview('${path}.html');`
-          }) -%>
+          }); -%>
         </nav>
       </aside>
     </main>
