--- a/data/pages/codedump/index.html.ejs
+++ b/data/pages/codedump/index.html.ejs
@@ -18,6 +18,7 @@
   <head>
     <title>CodeDump</title>
     <%- include('../../components/default-head'); -%>
+    <link rel="stylesheet" href="/styles/codedump.css"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/10.7.1/styles/stackoverflow-dark.min.css">
     <script>
       'use strict';
