--- a/data/styles.scss
+++ b/data/styles.scss
@@ -1,9 +1,9 @@
 @use "sass:color";
-@use "prefetch";
+@use "pure";
 @use "../node_modules/bootstrap/scss/bootstrap" with (
-    $primary: color.change(prefetch.$primary, $lightness: 40%),
-    $success: color.change(prefetch.$success, $lightness: 30%),
-    $dark: color.scale(prefetch.$dark, $lightness: -15%),
+    $primary: color.change(pure.$primary, $lightness: 40%),
+    $success: color.change(pure.$success, $lightness: 30%),
+    $dark: color.scale(pure.$dark, $lightness: -15%),
 );
 
 /* purgecss start ignore */
@@ -34,76 +34,5 @@ a {
 }
 code { color: color.change(bootstrap.$pink, $lightness: 80%); }
 pre code { color: white; }
-
-details {
-    white-space: nowrap;
-    ul {
-        margin-bottom: 0;
-        padding-left: 1rem;
-        border-left: 2px dotted white;
-        li { list-style-type: none; }
-    }
-}
-@mixin collapse-menu {
-    + main > {
-        #editor { flex-grow: 1; }
-        label[for=collapse-btn] {
-            img { transform: rotate(90deg); }
-            #open-lbl { display: inline; }
-            #close-lbl { display: none; }
-        }
-        aside {
-            width: 0;
-            padding-left: 0 !important;
-            padding-right: 0 !important;
-            flex-grow: 0;
-        }
-    }
-}
-@media (min-width: 40rem) {
-    #collapse-btn:checked { @include collapse-menu; }
-    #collapse-btn:not(:checked) + main #open-lbl { display: none; }
-}
-@media (max-width: 40rem) {
-    #collapse-btn:checked + main {
-        #editor { border: none; }
-        #open-lbl { display: none; }
-    }
-    #collapse-btn:not(:checked) { @include collapse-menu; }
-}
-main > aside {
-    @media (min-width: 40rem) { width: 20rem; }
-    @media (max-width: 40rem) { flex-grow: 1; }
-    overflow-x: hidden;
-    transition-duration: 0.5s;
-    transition-property: width padding flex-grow;
-}
-label[for=collapse-btn] {
-    $darker: color.scale(bootstrap.$dark, $lightness: -40%);
-    $darkest: color.scale($darker, $lightness: -40%);
-    @include bootstrap.button-variant($darker, $darkest, $darker, $darkest);
-    @include bootstrap.border-right-radius(0);
-    border-right: 0;
-    width: 1.5rem;
-    margin: 0;
-    align-items: center;
-    justify-content: space-around;
-    img {
-        width: 1rem;
-        height: 1rem;
-        transform: rotate(-90deg);
-        transition-duration: 0.5s;
-    }
-}
-#editor {
-    border: solid #121212 2px;
-    @media (min-width: 40rem) { flex-grow: 1; }
-    @media (max-width: 40rem) {
-        flex-grow: 0;
-        width: 0;
-        transition-duration: 0.5s;
-        transition-property: border flex-grow width;
-    }
-}
 
 /* purgecss end ignore */
