--- a/data/pages/codedump/index.html.ejs
+++ b/data/pages/codedump/index.html.ejs
@@ -33,7 +33,7 @@
       }
     </script>
   </head>
-  <body>
+  <body style="background-image: none;">
     <%- include('../../components/nav'); -%>
     <input type="checkbox" id="collapse-btn" style="display: none;" aria-hidden="true"/>
     <main class="d-flex flex-row-reverse" style="overflow: hidden;">
