--- a/data/components/filetree.ejs
+++ b/data/components/filetree.ejs
@@ -1,4 +1,5 @@
 <%
+  const manualFilenames = ['index.html.ejs', 'README.md'];
   function groupBy(objects, lambda) {
     const map = {};
     for (const member of objects) {
@@ -27,7 +28,9 @@
         <img src="../styles/fileicon/<%= file.name.split('.').pop() %>.svg"
             alt="" style="width: 1rem; height: 1rem;"/>
         <a href="<%= trimmedPath %>.html" onclick="<%= onclick(trimmedPath) %>">
-          <%= file.name %>
+          <% if (manualFilenames.includes(file.name)) { %><b><% } %>
+            <%= file.name %>
+          <% if (manualFilenames.includes(file.name)) { %></b><% } %>
         </a>
       </li>
     <% } -%>
