--- a/data/pages/projects.html.ejs
+++ b/data/pages/projects.html.ejs
@@ -4,8 +4,8 @@
     <title>WylieYYYY's Projects</title>
     <%- include('../components/default-head'); -%>
     <script src="showonjs.js" defer></script>
-    <script src="https://cdn.jsdelivr.net/npm/vue@2" defer></script>
-    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js" defer></script>
+    <script src="https://cdn.jsdelivr.net/npm/vue@3.3.4/dist/vue.global.prod.min.js" defer></script>
+    <script src="https://cdn.jsdelivr.net/npm/axios@1.4.0/dist/axios.min.js" defer></script>
     <script src="projects.js" defer></script>
     <style>
       .fade-leave-active {
@@ -134,7 +134,7 @@
                   :style="modal.body === null ? 'overflow: hidden;' : ''">
                 <p v-html="modal.body"></p>
                 <script type="text/x-template" class="show-on-js">
-                  <div v-show="modal.body === null" class="justify-content-center align-items-center"
+                  <div v-if="modal.body === null" class="justify-content-center align-items-center"
                   style="display: none;" :style="'width: 100%; height: 100%; display: flex;'">
                     <div class="spinner-border text-primary" role="status">
                       <span class="sr-only">Loading...</span>
