--- a/data/components/nav.ejs
+++ b/data/components/nav.ejs
@@ -3,6 +3,7 @@
     'Projects': 'projects.html',
     'Demo Info': 'demoinfo.html',
     'Blog': 'blog.html',
+    '<code>CODEDUMP</code>': 'codedump/index.html',
   }
 %>
 <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
@@ -13,10 +14,10 @@
     <% for (const [name, path] of Object.entries(pagePairs)) { -%>
       <% if (current === path) { -%>
         <li class="nav-item active">
-          <a class="nav-link" href="#"><%= name %> <span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="#"><%- name %><span class="sr-only"> (current)</span></a>
       <% } else { -%>
         <li class="nav-item">
-          <a class="nav-link" href="/<%= path %>"><%= name %></a>
+          <a class="nav-link" href="/<%= path %>"><%- name %></a>
       <% } -%>
       </li>
     <% } -%>
